testsuite/poke.pkl/raise-diag-1.pk
/* { dg-do compile } */

raise "foo"; /* { dg-error "" } */
